@@ -1168,12 +1168,14 @@ http://sourceforge.net/project/showfiles.php?group_id=21935&amp;package_id=16608
 				<pathelement location="src/tests/build/classes-capi/allinone" />
 				<pathelement location="src/tests/build/classes-api/allinone" />
 				<pathelement location="src/tests/build/classes-types/allinone" />
+				<pathelement location="file://C:/Java/logging-log4j-1.2.9/dist/classes" />
 				<fileset dir="lib" includes="*.jar" />
 			</classpath>
 			<sourcepath>
 				<pathelement location="src/java-client-framework" />
 				<pathelement location="src/java-server-framework" />
 				<pathelement location="src/java-common" />
+				<pathelement location="file://C:/Java/logging-log4j-1.2.9/src/java" />
 			</sourcepath>
 		</nbjpdastart>
 
