@@ -165,12 +165,25 @@
 					<dtd publicId="-//XINS//DTD XINS Translation Bundle 1.0//EN"
 					     location="{$xins_home}/src/dtd/translation-bundle_1_0.dtd" />
 
+					<dtd publicId="-//XINS//DTD XINS Project 1.1//EN"
+					     location="{$xins_home}/src/dtd/xins-project_1_1.dtd" />
+					<dtd publicId="-//XINS//DTD XINS API 1.1//EN"
+					     location="{$xins_home}/src/dtd/api_1_1.dtd" />
 					<dtd publicId="-//XINS//DTD Function 1.1//EN"
 					     location="{$xins_home}/src/dtd/function_1_1.dtd" />
 					<dtd publicId="-//XINS//DTD Type 1.1//EN"
 					     location="{$xins_home}/src/dtd/type_1_1.dtd" />
+					<dtd publicId="-//XINS//DTD Result Code 1.1//EN"
+					     location="{$xins_home}/src/dtd/resultcode_1_1.dtd" />
 					<dtd publicId="-//XINS//DTD Implementation 1.1//EN"
 					     location="{$xins_home}/src/dtd/impl_1_1.dtd" />
+					<dtd publicId="-//XINS//DTD Environments 1.1//EN"
+					     location="{$xins_home}/src/dtd/environments_1_1.dtd" />
+					<dtd publicId="-//XINS//DTD XINS Logdoc 1.1//EN"
+					     location="{$xins_home}/src/dtd/log_1_1.dtd" />
+					<dtd publicId="-//XINS//DTD XINS Translation Bundle 1.1//EN"
+					     location="{$xins_home}/src/dtd/translation-bundle_1_1.dtd" />
+
 				</xmlcatalog>
 			</target>
 
